Use a delegation to override FocusRing behavior for checkboxes and radio buttons.

Bug: 706297
Bug: 683858
Change-Id: Ibb51dbacc26164ead556488da18fb322350fddff