ui/views/controls/button/radio_button.cc
@@ -146,9 +146,10 @@ void RadioButton::SetChecked(bool checked) {
   Checkbox::SetChecked(checked);
 }
 
-void RadioButton::PaintFocusRing(gfx::Canvas* canvas,
+void RadioButton::PaintFocusRing(FocusRing* focus_ring,
+                                 gfx::Canvas* canvas,
                                  const cc::PaintFlags& flags) {
-  canvas->DrawCircle(gfx::RectF(image()->bounds()).CenterPoint(),
+  canvas->DrawCircle(gfx::RectF(focus_ring->GetLocalBounds()).CenterPoint(),
                      image()->width() / 2, flags);
 }
 
