ui/views/controls/button/radio_button.h
@@ -35,7 +35,8 @@ class VIEWS_EXPORT RadioButton : public Checkbox {
 
   // Overridden from Checkbox:
   void SetChecked(bool checked) override;
-  void PaintFocusRing(gfx::Canvas* canvas,
+  void PaintFocusRing(View* view,
+                      gfx::Canvas* canvas,
                       const cc::PaintFlags& flags) override;
   const gfx::VectorIcon& GetVectorIcon() const override;
 
